2005-01-17  Erez Zadok  <ezk@cs.sunysb.edu>

	* doc/am-utils.texi (Automatic Unmounting): document new umount2()
	behavior on Linux.

	* conf/umount/umount_linux.c (umount_fs): new file.  On Linux, if
	umount(2) failed with EIO or ESTALE, try umount2(2) with
	MNT_FORCE+MNT_DETACH.  Based on patch from Christos Zoulas
	<christos@zoulas.com>.

	* m4/macros/check_umount_style.m4: pick new linux umount style.

	* Makefile.am (EXTRA_DIST_CONF): distribute new umount_linux.c
	file.

2005-01-16  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/nfs_prot/nfs_prot_aix{4_2,4_3,5_1,5_2}.h,
	m4/macros/struct_nfs_args.m4: minor cleanups for quicker execution
	of "nfs_args" test.

2005-01-13  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/get_args.c (show_usage): separate function to print usage
	string.
	(get_args) Call show_usage() from get_args when needed, then exit.

	* amd/get_args.c (get_version_string): print also domain, host,
	and hostd.
	(get_args): print version string at the very end, after all other
	values had been initialized.  Patch from Christos Zoulas
	<christos@zoulas.com>.

	* conf/transp/transp_sockets.c (check_pmap_up, get_nfs_version),
	conf/transp/transp_tli.c (check_pmap_up): correct an inconsistency
	in timeouts in the RPC code between socket and TLI
	implementations.  The clntudp_create timeout has a different
	meaning than the clnt_call timeout.  Set the timeout of the create
	to 2 seconds which means retry if no answer in two seconds, and
	the timeout call to 6 seconds, which will give us consistently 2
	to 3 pings.  This is useful on occasional network UDP loss where a
	single packet loss would wrongfully mark a server down.  (The TLI
	code is the one that had the problem occurs.)  Patch from Christos
	Zoulas <christos@zoulas.com>.

	* libamu/mount_fs.c (compute_nfs_attrcache_flags): make sure code
	compiles even for systems that don't have the nfs_args
	ac{reg,dir}{min,max} fields.

	* amd/amfs_toplvl.c (set_auto_attrcache_timeout): just to be safe,