@@ -1,3 +1,11 @@
+2005-01-17  Ion Badulescu  <ionut@moisil.badula.org>
+
+	* conf/umount/umount_linux.c (umount_fs): Linux doesn't need the
+	autofs space hack
+
+	* conf/umount/umount_default.c (umount_fs): there is no need for
+	HAVE_LOOP_DEV, now that Linux has its own dedicated umount_linux.c
+
 2005-01-17  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	* doc/am-utils.texi (Automatic Unmounting): document new umount2()
